[package]
name = "luxonis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.12.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }

# By default, `serde` has the `std` feature enabled, which makes it unsuitable for embedded targets
# disabling default-features fixes this
serde = { version = "1.0.*", default-features = false, features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
rmp-serde = "1.3.0"
serde_repr = "0.1.19"
